; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_device.c_usbd_set_parent_iface.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_device.c_usbd_set_parent_iface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }
%struct.usb_interface = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usbd_set_parent_iface(%struct.usb_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.usb_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.usb_interface*, align 8
  store %struct.usb_device* %0, %struct.usb_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %9 = icmp eq %struct.usb_device* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  br label %21

11:                                               ; preds = %3
  %12 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call %struct.usb_interface* @usbd_get_iface(%struct.usb_device* %12, i32 %13)
  store %struct.usb_interface* %14, %struct.usb_interface** %7, align 8
  %15 = load %struct.usb_interface*, %struct.usb_interface** %7, align 8
  %16 = icmp ne %struct.usb_interface* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load i32, i32* %6, align 4
  %19 = load %struct.usb_interface*, %struct.usb_interface** %7, align 8
  %20 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  br label %21

21:                                               ; preds = %10, %17, %11
  ret void
}

declare dso_local %struct.usb_interface* @usbd_get_iface(%struct.usb_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
